--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,34 @@
 <resources>
-    <string name="app_name">StroopTest</string>
+    <string name="app_name">Test Stroopa</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+
+    <string name="text_button_start">Start</string>
+    <string name="text_trial_failure">Spróbuj jeszcze raz</string>
+    <string name="text_trial_success">Test zakończony pomyślnie, przejdź do właściwego testu</string>
+    <string name="text_test_finished">Test zakończony</string>
+
+    <string name="text_description">
+        <![CDATA[
+        W tym zadaniu będziesz widzieć słowa (niebieski, czerwony, zielony, żółty, xxx) wyświetlane różnymi kolorami
+        „tuszu”. Twoim zadaniem będzie naciśnięcie przycisku odpowiadającemu kolorowi „tuszu”, a nie napisanemu słowu.
+        <p>
+        Na przykład, jeśli zobaczysz bodziec
+        <p>
+        <font color=\'#EE0000\'>Zielony</font>
+       <p>
+        zaznacz przycisk odpowadający kolorowi czerwonemu, ponieważ to w tym kolorze wyświetlane jest słowo.
+       <p>
+        Naciskaj przyciski tak szybko, jak to możliwe.
+     <p>
+        Na początku przejdziesz przez wersję próbną testu. Jeżeli ukończysz ją, udzieliwszy przynajmniej 70% poprawnych
+        odpowiedzi, przejdziesz do właściwego testu. Jeśli poprawność wyniesie mniej niż 70%, zostaniesz poproszony/a o
+        powtórzenie próby.
+      <p>
+        Zapamiętaj kolory przyporządkowane przyciskom – podczas testu nie będą one widoczne. ]]>
+    </string>
 </resources>
